[tool.poetry]
name = "firm-aptesting"
version = "0.1.0"
description = "ActivityPub Test Suite for firm"
authors = ["Steve Bate <svc-github@stevebate.net>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
activitypub-testsuite = {path = "../activitypub-testsuite", develop = true}
firm-server = {path = "../../firm-server", develop = true}
pytest-httpx = "^0.30.0"
firm-jsonschema = {path = "../../firm-jsonschema", develop = true}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
# asyncio_mode = "auto"
markers = [
    "ap_reqlevel: ActivityPub requirements level",
    "ap_capability: ActivityPub/AS2 capability required for test",
]
asyncio_default_fixture_loop_scope = "function"
